# mica

./: CMakeLists.txt  LICENSE  README.md
cmake/: Util.cmake  micaConfig.cmake.in
cmake/modules/: FindCatch2.cmake
src/mica/: format.hpp  format.inl  macro.hpp  make_noexcept.hpp  make_noexcept.inl  mica.hpp  resolve.hpp  resolve.inl  try.hpp  type_traits.hpp
test/unit/: CMakeLists.txt
test/unit/cmake/: Sources.cmake
test/unit/src/mica_test/: format_test.cpp  make_noexcept_capturing_lambda_test.cpp  make_noexcept_free_function_test.cpp  make_noexcept_member_function_test.cpp  make_noexcept_noncapturing_lambda_test.cpp  make_noexcept_test.cpp  try_test.cpp  wrap_template_test.cpp
